# kush-os

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_toolchain.sh  toolchain.diff
Core/: CMakeLists.txt  README.md
Core/Kernel/: CMakeLists.txt  Doxyfile.in
Core/Kernel/Includes/: Bitflags.h  BuildInfo.h  Init.h  Platform.h  cstdarg  cstddef
Core/Kernel/Includes/Exceptions/: Handler.h
Core/Kernel/Includes/Logging/: Console.h
Core/Kernel/Includes/Memory/: PhysicalAllocator.h  Pool.h  Region.h
Core/Kernel/Includes/Runtime/: Printf.h  RefCountable.h  String.h
Core/Kernel/Includes/Vm/: ContiguousPhysRegion.h  Manager.h  Map.h  MapEntry.h
Core/Kernel/Sources/: BuildInfo.cpp.in  Init.cpp
Core/Kernel/Sources/Exceptions/: Handler.cpp
Core/Kernel/Sources/Logging/: Console.cpp
Core/Kernel/Sources/Memory/: PhysicalAllocator.cpp  Pool.cpp  Region.cpp
Core/Kernel/Sources/Runtime/: CppSupport.cpp  StackGuard.cpp  String.cpp
Core/Kernel/Sources/Vm/: ContiguousPhysRegion.cpp  Manager.cpp  Map.cpp  MapEntry.cpp
kernel/: CMakeLists.txt
kernel/arch/x86/: CMakeLists.txt  syscall_stub.ld
kernel/arch/x86/doc/: MemMap.tex
kernel/arch/x86/include/: x86_io.h  x86_msr.h
kernel/arch/x86/src/: exceptions.S  exceptions.c  exceptions.cpp  exceptions.h  gdt.S  gdt.c  gdt.cpp  gdt.h  idt.c  idt.cpp  idt.h  init.c  init.cpp
kernel/arch/x86_64/: CMakeLists.txt  syscall_stub.ld
kernel/arch/x86_64/doc/: .gitignore  MemMap.tex
kernel/arch/x86_64/src/: IrqRegistry.cpp  IrqRegistry.h  IrqStubs.S  IrqStubs.h  PerCpuInfo.cpp  PerCpuInfo.h  exception_types.h  exceptions.S  exceptions.cpp  exceptions.h  gdt.S  gdt.cpp  gdt.h  idt.cpp  idt.h  init.cpp  math.c
kernel/doc/: .gitignore  syscalls.tex
kernel/include/: arch.h  bitflags.h  log.h  new  platform.h  string.h  version.h
kernel/platform/pc/: CMakeLists.txt  linker.ld
kernel/platform/pc/src/: InitTask.cpp  InitTask.h  boot.S  elf.h  memmap.h  multiboot.c  multiboot.cpp  multiboot.h  panic.S  physmap.c  physmap.cpp  physmap.h  platform.c  platform.cpp
kernel/platform/pc64/: CMakeLists.txt  bootimg.json  kernconf-pc64  linker.ld
kernel/platform/pc64/src/: boot.S  memmap.h  panic.S  physmap.cpp  physmap.h  platform.cpp
kernel/src/: boot.S  init.c  init.cpp  init.h  version.cpp.in
kernel/src/c/: stack_guard.c  string.c
kernel/src/crypto/: Random.cpp  Random.h  RandomPool.cpp  RandomPool.h  aes.c  aes.h  sha2.c  sha2.h
kernel/src/debug/: BitmapFonts.cpp  BitmapFonts.h  FramebufferConsole.cpp  FramebufferConsole.h  SchedulerState.cpp  SchedulerState.h
kernel/src/handle/: Manager.cpp  Manager.h
kernel/src/ipc/: Interrupts.cpp  Interrupts.h  Port.cpp  Port.h
kernel/src/mem/: AnonPool.cpp  AnonPool.h  Heap.cpp  Heap.h  PhysRegion.cpp  PhysRegion.h  PhysicalAllocator.cpp  PhysicalAllocator.h  SlabAllocator.h  StackPool.cpp  StackPool.h
kernel/src/mem/dlmalloc/: dlmalloc.cpp  dlmalloc.h
kernel/src/mem/liballoc/: internal.h  liballoc.cpp  liballoc.h
kernel/src/runtime/: BinarySearchTree.h  CppRuntime.cpp  Hash.cpp  Hash.h  HashTable.h  List.h  LockFreeQueue.h  MinHeap.h  Queue.h  RedBlackTree.h  SmartPointers.h  SortedList.h  Vector.h  log.c  log.cpp
kernel/src/sched/: Blockable.h  Deadline.h  GlobalState.cpp  GlobalState.h  IdleWorker.cpp  IdleWorker.h  Oclock.cpp  Oclock.h  PeerList.cpp  PeerList.h  Scheduler.cpp  Scheduler.h  SchedulerBehavior.h  SchedulerData.h  SignalFlag.h  SleepDeadline.h  Task.cpp  Task.h  Thread.cpp  Thread.h  TimerBlocker.h
kernel/src/sys/: Errors.h  Handlers.h  Interrupts.cpp  Misc.cpp  Notifications.cpp  Port.cpp  Syscall.cpp  Syscall.h  Task.cpp  Thread.cpp  VM.cpp
kernel/src/vm/: IPTEHandler.h  Map.cpp  Map.h  MapEntry.cpp  MapEntry.h  MapTree.h  Mapper.cpp  Mapper.h
tools/: .gitignore  CMakeLists.txt  README.md
tools/idlc/: CMakeLists.txt
tools/idlc/include/: version.h
tools/idlc/sample/: hello.idl
tools/idlc/src/: CodeGenerator+Client.cpp  CodeGenerator+CppHelpers.cpp  CodeGenerator+CppHelpers.h  CodeGenerator+Proto.cpp  CodeGenerator+Serialization.cpp  CodeGenerator+Server.cpp  CodeGenerator.cpp  CodeGenerator.h  IDLGrammar.h  IDLParser.cpp  IDLParser.h  InterfaceDescription.cpp  InterfaceDescription.h  InterfaceDescriptionBuilder.cpp  InterfaceDescriptionBuilder.h  InterfaceDescriptionBuilderActions.h  main.cpp
tools/idlc/src/util/: MurmurHash2.cpp  MurmurHash2.h
tools/mkinit/: CMakeLists.txt
tools/mkinit/src/: BundleTypes.h  InitBundle.cpp  InitBundle.h  main.cpp
user/: CMakeLists.txt
user/acpi/: CMakeLists.txt
user/acpi/include/: bootboot.h
user/acpi/src/: AcpiUtils.h  AcpicaWrapper.cpp  AcpicaWrapper.h  Log.cpp  main.cpp
user/acpi/src/bus/: Bus.h  PciBus.cpp  PciBus.h  (+4 more)
user/driverman/: CMakeLists.txt  README.md
user/driverman/src/: main.cpp
user/drivers/: CMakeLists.txt
user/drivers/acpi/: CMakeLists.txt
user/drivers/ahci/: CMakeLists.txt
user/drivers/filesystem/: CMakeLists.txt  README.md
user/drivers/pci/: CMakeLists.txt
user/drivers/ps2/: CMakeLists.txt
user/drivers/vmwaresvga/: CMakeLists.txt  README.md
user/dyldo/: CMakeLists.txt
user/dyldo/lib/: CMakeLists.txt
user/dyldo/srv/: CMakeLists.txt
user/gui/: CMakeLists.txt  README.md
user/gui/lib/: CMakeLists.txt  README.md
user/gui/windowserver/: CMakeLists.txt  README.md
user/ipc/: CMakeLists.txt  README.md
user/ipc/disk/: CMakeLists.txt
user/ipc/gpu/: CMakeLists.txt
user/lib/: CMakeLists.txt  README.md  buildit.sh
user/lib/libc/: CMakeLists.txt  README.md
user/lib/libdriver/: CMakeLists.txt
user/lib/librpc/: CMakeLists.txt
user/lib/libsystem/: CMakeLists.txt
user/libc/: CMakeLists.txt
user/libc/include/: _libc.h  errno.h  fcntl.h  inttypes.h  math.h  printf.h  stdlib.h  string.h  time.h  wchar.h
user/libm/: CMakeLists.txt
user/rootsrv/: CMakeLists.txt
user/rootsrv/data/: amd64_pc.init  x86_pc.init
user/rootsrv/include/: .gitignore  LaunchInfo.h  StringHelpers.h
user/rootsrv/rpc/: TaskEndpoint.capnp  TaskEndpoint.capnp.c++  TaskEndpoint.capnp.h  TaskEndpoint.h
user/rootsrv/src/: log.c  log.h  main.c  main.cpp
(+865 files in other folders)
