###################################################################################################
# Builds the various components responsible for providing the graphical user interface.
###################################################################################################


if(BUILD_SYSTEM_SERVERS)
    add_subdirectory(windowserver)
endif()
